objects/SFDC_Applicant__c.object
<CustomObject>
    <description>Job Applicant</description>
    <fields>
        <fullName>Applicant_Address__c</fullName>
        <label>Applicant Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Applicant_Education__c</fullName>
        <label>Applicant Education</label>
        <picklist>
            <picklistValues>
                <fullName>High School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Degree in Progress - BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Degree in Progress - MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 year college</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 year college</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctorate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional (MD, JD, CPA)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Email__c</fullName>
        <label>Applicant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Applicant_Gender__c</fullName>
        <label>Applicant Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Job_Codes__c</fullName>
        <label>Applicant Job Codes</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Keywords__c</fullName>
        <label>Applicant Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Applicant_Preferred_Phone__c</fullName>
        <label>Applicant Preferred Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Applicant_Previously_Interviewed__c</fullName>
        <label>Applicant Previously Interviewed</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Source__c</fullName>
        <label>Applicant Source</label>
        <picklist>
            <picklistValues>
                <fullName>DICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotjobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monster.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle Alumni Posting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSFT Alumni Posting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruiting Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workopolis.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Status__c</fullName>
        <label>Applicant Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Resubmitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review - Hiring Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Rejection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send No Position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consider for future positions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Position Filled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Travel_Time__c</fullName>
        <label>Applicant Travel Time</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_US_Work_authorization__c</fullName>
        <label>Applicant US Work authorization</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001WXBcEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Resume_Submitted__c</fullName>
        <label>Date Resume Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Fit__c</fullName>
        <label>Referral Fit</label>
        <picklist>
            <picklistValues>
                <fullName>1-Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referring_Employee_Comments__c</fullName>
        <label>Referring Employee Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referring_Employee_Relationship__c</fullName>
        <label>Referring Employee Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former co-worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referring_Employee__c</fullName>
        <label>Referring Employee</label>
        <referenceTo>SFDC_Referring_Employee__c</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>R00N30000001WXBdEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <label>Resume</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Applicant_Name__c</fullName>
        <label>Applicant Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary_Information__c</fullName>
        <label>Salary Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_Location__c</fullName>
        <label>Site Location</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research &amp; Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Applicant</label>
    <language>en_US</language>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Applicant_Status__c</columns>
        <columns>Applicant_Email__c</columns>
        <columns>Applicant_Preferred_Phone__c</columns>
        <columns>Applicant_Source__c</columns>
        <columns>Date_Resume_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>